# roja

./: .gitignore  Cargo.toml  README.md  todo.md
.circleci/: config.yml
.circleci/images/: Dockerfile
player/: Cargo.toml
player/src/: main.rs
player/src/listener/: console.rs  focus.rs  list.rs  mod.rs  now_playing.rs  playlist_view.rs  search.rs
player/src/player/: player_property.rs
player/src/settings/: mod.rs
player/src/store/: mod.rs  models.rs
player/src/ui/: event.rs  label.rs  layout.rs  mod.rs
player/src/util/: channel.rs  mod.rs
roja/: Cargo.toml
roja-build-database/: Cargo.toml
roja-build-database/src/: build_database.rs  build_search_index.rs  connection.rs  main.rs  progress.rs
roja/src/: library.rs  main.rs
roja/src/listener/: console.rs  focus.rs  folders_view.rs  list.rs  mod.rs  now_playing.rs  player.rs  player_events.rs  playlist_view.rs  search.rs  terminal.rs  track_index.rs  window.rs
roja/src/listener/search/: mod.rs  search_index.rs
roja/src/player/: mod.rs  player_property.rs
roja/src/settings/: colors.rs  config.rs  mod.rs
roja/src/store/: mod.rs  models.rs
roja/src/ui/: event.rs  label.rs  layout.rs  listener.rs  mod.rs
roja/src/util/: channel.rs  mod.rs  unicode.rs
server/: index.js  package.json
src/: config.rs  cursive_table_view.rs  library.rs  main.rs  player.rs  player_events.rs  runtime.rs  settings.rs  ui.rs  util.rs
src/component/: library.rs  list.rs  mod.rs  player.rs  terminal.rs
src/listener/: focus.rs  folders.rs  folders_view.rs  list.rs  mod.rs  player.rs  player_events.rs  playlist_view.rs  terminal.rs  track_index.rs  window.rs
src/player/: as_text_contents.rs  event.rs  event_handler.rs  evented.rs  events.rs  has_metadata.rs  mod.rs  mpv_api.rs  player.rs  player_metadata.rs  player_property.rs  poller.rs  seek_mode.rs
src/player_events/: handle_player_event.rs  property_change_event.rs
src/runtime/: event_handler.rs  handle_property_change.rs
src/settings/: cli.rs  cli_options.rs  colors.rs  config.rs  deserialize_color.rs  mod.rs
src/store/: initialize_database.rs  metadata.rs  mod.rs  query.rs
src/ui/: application.rs  application_view.rs  canvas.rs  component.rs  components.rs  cursor.rs  drawable.rs  event.rs  event_bus.rs  handle_ui_events.rs  helpers.rs  label.rs  label_set.rs  layout.rs  listener.rs  main.rs  metadata.rs  mod.rs  player.rs  player_view.rs  runtime_state.rs  search.rs  search_view.rs  selectors.rs  state.rs  track_list.rs  ui.rs  views.rs
src/ui/components/: dashboard.rs  keyboard_shortcuts.rs
src/ui/views/: application.rs  main.rs
src/util/: canvas.rs  channel.rs  format_duration.rs  mod.rs  point.rs  terminal.rs  unicode.rs  usize_to_u16.rs
