[package]
name = "roja"
version = "0.1.0"
authors = ["Mukund Lakshman <yaymukund@gmail.com>"]
edition = "2018"

[dependencies]
crossterm = "0.17"
env_logger = "0.7"
fst = "0.4"
log = "0.4"
mpv = { git = "https://github.com/yaymukund/mpv-rs" }
once_cell = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.12"
unicode-segmentation = "1.6.0"
unicode-width = "0.1.7"
xdg = "^2.1"
