[package]
name = "roja"
version = "0.1.0"
authors = ["Mukund Lakshman <yaymukund@gmail.com>"]
edition = "2018"

[dependencies]
alphanumeric-sort = "1.0.13"
crossterm = "0.17"
env_logger = "0.7"
fst = "0.4"
gumdrop = "0.8"
log = "0.4"
mpv = { git = "https://github.com/yaymukund/mpv-rs" }
rusqlite = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-segmentation = "1.6.0"
unicode-width = "0.1.7"
xdg = "^2.1"
