[package]
name = "roja"
version = "0.1.0"
authors = ["Mukund Lakshman <yaymukund@gmail.com>"]
edition = "2018"

[dependencies]
alphanumeric-sort = "1.0"
anyhow = "1.0"
crossterm = "0.17"
env_logger = "0.7"
filetime = "0.2"
fst = "0.4"
gumdrop = "0.8"
id3 = "0.5"
log = "0.4"
mp3-duration = "0.1"
once_cell = "1.4"
rusqlite = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-segmentation = "1.6.0"
unicode-width = "0.1.7"
walkdir = "2.3"
xdg = "^2.1"

[dependencies.libmpv]
version = "1.0"
# features = ["build_libmpv"]
