[package]
name = "roja"
version = "0.1.0"
authors = ["Mukund Lakshman <yaymukund@gmail.com>"]
description = "the roja music player"
edition = "2018"

[dependencies]
alphanumeric-sort = "1.4"
anyhow = "1.0"
crossbeam-channel = "0.5"
crossterm = "0.19"
env_logger = "0.8"
fst = "0.4"
gumdrop = "0.8"
libmpv = "2.0"
log = "0.4"
memmap = "0.7"
once_cell = "1.4"
rusqlite = "0.24"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
unicode-segmentation = "1.6.0"
unicode-width = "0.1.7"
xdg = "^2.1"
